y.output
Terminaux inutilisés dans la grammaire

   tOB
   tCB
   tIE
   tSE
   tSUP
   tINF
   tEQ
   tNBFLOAT
   tTRUE
   tFALSE
   tCONST
   tFLOAT
   tBOOL
   tCHAR
   tNOT
   tNEQ
   tIF
   tWHILE


État 61 conflits: 4 décalage/réduction


Grammaire

    0 $accept: File $end

    1 File: Main

    2 Main: tMAIN tOP tCP tOA Body Return tCA

    3 Body: %empty

    4 $@1: %empty

    5 Body: $@1 Definition Body

    6 $@2: %empty

    7 Body: $@2 Affectation Body

    8 $@3: %empty

    9 Body: Print $@3 Body

   10 Print: tPRINTF tOP String tCP Pv
   11      | tPRINTF tOP tVAR tCP Pv

   12 String: tQ tVAR tQ

   13 Definition: tINT tVAR DefinitionN Pv

   14 DefinitionN: %empty
   15            | tV tVAR DefinitionN

   16 Pv: tPV

   17 $@4: %empty

   18 Affectation: tVAR tAFC $@4 Expression Pv

   19 Expression: tNBINT
   20           | tVAR
   21           | Expression OpInt Expression
   22           | tSUB Expression
   23           | tOP Expression tCP

   24 OpInt: tMUL
   25      | tDIV
   26      | tSUB
   27      | tADD

   28 $@5: %empty

   29 Return: tRETURN $@5 tOP Expression tCP


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tADD (258) 27
tSUB (259) 22 26
tMUL (260) 24
tDIV (261) 25
tPV (262) 16
tV (263) 15
tCP (264) 2 10 11 23 29
tOP (265) 2 10 11 23 29
tOB (266)
tCB (267)
tOA (268) 2
tCA (269) 2
tIE (270)
tSE (271)
tSUP (272)
tINF (273)
tEQ (274)
tAFC (275) 18
tNBFLOAT (276)
tTRUE (277)
tFALSE (278)
tMAIN (279) 2
tPRINTF (280) 10 11
tCONST (281)
tINT (282) 13
tFLOAT (283)
tBOOL (284)
tCHAR (285)
tNOT (286)
tNEQ (287)
tIF (288)
tWHILE (289)
tRETURN (290) 29
tQ (291) 12
tNBINT (292) 19
tVAR (293) 11 12 13 15 18 20


Non-terminaux, suivis des règles où ils apparaissent

$accept (39)
    à gauche: 0
File (40)
    à gauche: 1, à droite: 0
Main (41)
    à gauche: 2, à droite: 1
Body (42)
    à gauche: 3 5 7 9, à droite: 2 5 7 9
$@1 (43)
    à gauche: 4, à droite: 5
$@2 (44)
    à gauche: 6, à droite: 7
$@3 (45)
    à gauche: 8, à droite: 9
Print (46)
    à gauche: 10 11, à droite: 9
String (47)
    à gauche: 12, à droite: 10
Definition (48)
    à gauche: 13, à droite: 5
DefinitionN (49)
    à gauche: 14 15, à droite: 13 15
Pv (50)
    à gauche: 16, à droite: 10 11 13 18
Affectation (51)
    à gauche: 18, à droite: 7
$@4 (52)
    à gauche: 17, à droite: 18
Expression (53)
    à gauche: 19 20 21 22 23, à droite: 18 21 22 23 29
OpInt (54)
    à gauche: 24 25 26 27, à droite: 21
Return (55)
    à gauche: 29, à droite: 2
$@5 (56)
    à gauche: 28, à droite: 29


État 0

    0 $accept: . File $end

    tMAIN  décalage et aller à l'état 1

    File  aller à l'état 2
    Main  aller à l'état 3


État 1

    2 Main: tMAIN . tOP tCP tOA Body Return tCA

    tOP  décalage et aller à l'état 4


État 2

    0 $accept: File . $end

    $end  décalage et aller à l'état 5


État 3

    1 File: Main .

    $défaut  réduction par utilisation de la règle 1 (File)


État 4

    2 Main: tMAIN tOP . tCP tOA Body Return tCA

    tCP  décalage et aller à l'état 6


État 5

    0 $accept: File $end .

    $défaut  accepter


État 6

    2 Main: tMAIN tOP tCP . tOA Body Return tCA

    tOA  décalage et aller à l'état 7


État 7

    2 Main: tMAIN tOP tCP tOA . Body Return tCA

    tPRINTF  décalage et aller à l'état 8

    tINT      réduction par utilisation de la règle 4 ($@1)
    tVAR      réduction par utilisation de la règle 6 ($@2)
    $défaut  réduction par utilisation de la règle 3 (Body)

    Body   aller à l'état 9
    $@1    aller à l'état 10
    $@2    aller à l'état 11
    Print  aller à l'état 12


État 8

   10 Print: tPRINTF . tOP String tCP Pv
   11      | tPRINTF . tOP tVAR tCP Pv

    tOP  décalage et aller à l'état 13


État 9

    2 Main: tMAIN tOP tCP tOA Body . Return tCA

    tRETURN  décalage et aller à l'état 14

    Return  aller à l'état 15


État 10

    5 Body: $@1 . Definition Body

    tINT  décalage et aller à l'état 16

    Definition  aller à l'état 17


État 11

    7 Body: $@2 . Affectation Body

    tVAR  décalage et aller à l'état 18

    Affectation  aller à l'état 19


État 12

    9 Body: Print . $@3 Body

    $défaut  réduction par utilisation de la règle 8 ($@3)

    $@3  aller à l'état 20


État 13

   10 Print: tPRINTF tOP . String tCP Pv
   11      | tPRINTF tOP . tVAR tCP Pv

    tQ    décalage et aller à l'état 21
    tVAR  décalage et aller à l'état 22

    String  aller à l'état 23


État 14

   29 Return: tRETURN . $@5 tOP Expression tCP

    $défaut  réduction par utilisation de la règle 28 ($@5)

    $@5  aller à l'état 24


État 15

    2 Main: tMAIN tOP tCP tOA Body Return . tCA

    tCA  décalage et aller à l'état 25


État 16

   13 Definition: tINT . tVAR DefinitionN Pv

    tVAR  décalage et aller à l'état 26


État 17

    5 Body: $@1 Definition . Body

    tPRINTF  décalage et aller à l'état 8

    tINT      réduction par utilisation de la règle 4 ($@1)
    tVAR      réduction par utilisation de la règle 6 ($@2)
    $défaut  réduction par utilisation de la règle 3 (Body)

    Body   aller à l'état 27
    $@1    aller à l'état 10
    $@2    aller à l'état 11
    Print  aller à l'état 12


État 18

   18 Affectation: tVAR . tAFC $@4 Expression Pv

    tAFC  décalage et aller à l'état 28


État 19

    7 Body: $@2 Affectation . Body

    tPRINTF  décalage et aller à l'état 8

    tINT      réduction par utilisation de la règle 4 ($@1)
    tVAR      réduction par utilisation de la règle 6 ($@2)
    $défaut  réduction par utilisation de la règle 3 (Body)

    Body   aller à l'état 29
    $@1    aller à l'état 10
    $@2    aller à l'état 11
    Print  aller à l'état 12


État 20

    9 Body: Print $@3 . Body

    tPRINTF  décalage et aller à l'état 8

    tINT      réduction par utilisation de la règle 4 ($@1)
    tVAR      réduction par utilisation de la règle 6 ($@2)
    $défaut  réduction par utilisation de la règle 3 (Body)

    Body   aller à l'état 30
    $@1    aller à l'état 10
    $@2    aller à l'état 11
    Print  aller à l'état 12


État 21

   12 String: tQ . tVAR tQ

    tVAR  décalage et aller à l'état 31


État 22

   11 Print: tPRINTF tOP tVAR . tCP Pv

    tCP  décalage et aller à l'état 32


État 23

   10 Print: tPRINTF tOP String . tCP Pv

    tCP  décalage et aller à l'état 33


État 24

   29 Return: tRETURN $@5 . tOP Expression tCP

    tOP  décalage et aller à l'état 34


État 25

    2 Main: tMAIN tOP tCP tOA Body Return tCA .

    $défaut  réduction par utilisation de la règle 2 (Main)


État 26

   13 Definition: tINT tVAR . DefinitionN Pv

    tV  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 14 (DefinitionN)

    DefinitionN  aller à l'état 36


État 27

    5 Body: $@1 Definition Body .

    $défaut  réduction par utilisation de la règle 5 (Body)


État 28

   18 Affectation: tVAR tAFC . $@4 Expression Pv

    $défaut  réduction par utilisation de la règle 17 ($@4)

    $@4  aller à l'état 37


État 29

    7 Body: $@2 Affectation Body .

    $défaut  réduction par utilisation de la règle 7 (Body)


État 30

    9 Body: Print $@3 Body .

    $défaut  réduction par utilisation de la règle 9 (Body)


État 31

   12 String: tQ tVAR . tQ

    tQ  décalage et aller à l'état 38


État 32

   11 Print: tPRINTF tOP tVAR tCP . Pv

    tPV  décalage et aller à l'état 39

    Pv  aller à l'état 40


État 33

   10 Print: tPRINTF tOP String tCP . Pv

    tPV  décalage et aller à l'état 39

    Pv  aller à l'état 41


État 34

   29 Return: tRETURN $@5 tOP . Expression tCP

    tSUB    décalage et aller à l'état 42
    tOP     décalage et aller à l'état 43
    tNBINT  décalage et aller à l'état 44
    tVAR    décalage et aller à l'état 45

    Expression  aller à l'état 46


État 35

   15 DefinitionN: tV . tVAR DefinitionN

    tVAR  décalage et aller à l'état 47


État 36

   13 Definition: tINT tVAR DefinitionN . Pv

    tPV  décalage et aller à l'état 39

    Pv  aller à l'état 48


État 37

   18 Affectation: tVAR tAFC $@4 . Expression Pv

    tSUB    décalage et aller à l'état 42
    tOP     décalage et aller à l'état 43
    tNBINT  décalage et aller à l'état 44
    tVAR    décalage et aller à l'état 45

    Expression  aller à l'état 49


État 38

   12 String: tQ tVAR tQ .

    $défaut  réduction par utilisation de la règle 12 (String)


État 39

   16 Pv: tPV .

    $défaut  réduction par utilisation de la règle 16 (Pv)


État 40

   11 Print: tPRINTF tOP tVAR tCP Pv .

    $défaut  réduction par utilisation de la règle 11 (Print)


État 41

   10 Print: tPRINTF tOP String tCP Pv .

    $défaut  réduction par utilisation de la règle 10 (Print)


État 42

   22 Expression: tSUB . Expression

    tSUB    décalage et aller à l'état 42
    tOP     décalage et aller à l'état 43
    tNBINT  décalage et aller à l'état 44
    tVAR    décalage et aller à l'état 45

    Expression  aller à l'état 50


État 43

   23 Expression: tOP . Expression tCP

    tSUB    décalage et aller à l'état 42
    tOP     décalage et aller à l'état 43
    tNBINT  décalage et aller à l'état 44
    tVAR    décalage et aller à l'état 45

    Expression  aller à l'état 51


État 44

   19 Expression: tNBINT .

    $défaut  réduction par utilisation de la règle 19 (Expression)


État 45

   20 Expression: tVAR .

    $défaut  réduction par utilisation de la règle 20 (Expression)


État 46

   21 Expression: Expression . OpInt Expression
   29 Return: tRETURN $@5 tOP Expression . tCP

    tADD  décalage et aller à l'état 52
    tSUB  décalage et aller à l'état 53
    tMUL  décalage et aller à l'état 54
    tDIV  décalage et aller à l'état 55
    tCP   décalage et aller à l'état 56

    OpInt  aller à l'état 57


État 47

   15 DefinitionN: tV tVAR . DefinitionN

    tV  décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 14 (DefinitionN)

    DefinitionN  aller à l'état 58


État 48

   13 Definition: tINT tVAR DefinitionN Pv .

    $défaut  réduction par utilisation de la règle 13 (Definition)


État 49

   18 Affectation: tVAR tAFC $@4 Expression . Pv
   21 Expression: Expression . OpInt Expression

    tADD  décalage et aller à l'état 52
    tSUB  décalage et aller à l'état 53
    tMUL  décalage et aller à l'état 54
    tDIV  décalage et aller à l'état 55
    tPV   décalage et aller à l'état 39

    Pv     aller à l'état 59
    OpInt  aller à l'état 57


État 50

   21 Expression: Expression . OpInt Expression
   22           | tSUB Expression .

    tMUL  décalage et aller à l'état 54
    tDIV  décalage et aller à l'état 55

    $défaut  réduction par utilisation de la règle 22 (Expression)

    OpInt  aller à l'état 57


État 51

   21 Expression: Expression . OpInt Expression
   23           | tOP Expression . tCP

    tADD  décalage et aller à l'état 52
    tSUB  décalage et aller à l'état 53
    tMUL  décalage et aller à l'état 54
    tDIV  décalage et aller à l'état 55
    tCP   décalage et aller à l'état 60

    OpInt  aller à l'état 57


État 52

   27 OpInt: tADD .

    $défaut  réduction par utilisation de la règle 27 (OpInt)


État 53

   26 OpInt: tSUB .

    $défaut  réduction par utilisation de la règle 26 (OpInt)


État 54

   24 OpInt: tMUL .

    $défaut  réduction par utilisation de la règle 24 (OpInt)


État 55

   25 OpInt: tDIV .

    $défaut  réduction par utilisation de la règle 25 (OpInt)


État 56

   29 Return: tRETURN $@5 tOP Expression tCP .

    $défaut  réduction par utilisation de la règle 29 (Return)


État 57

   21 Expression: Expression OpInt . Expression

    tSUB    décalage et aller à l'état 42
    tOP     décalage et aller à l'état 43
    tNBINT  décalage et aller à l'état 44
    tVAR    décalage et aller à l'état 45

    Expression  aller à l'état 61


État 58

   15 DefinitionN: tV tVAR DefinitionN .

    $défaut  réduction par utilisation de la règle 15 (DefinitionN)


État 59

   18 Affectation: tVAR tAFC $@4 Expression Pv .

    $défaut  réduction par utilisation de la règle 18 (Affectation)


État 60

   23 Expression: tOP Expression tCP .

    $défaut  réduction par utilisation de la règle 23 (Expression)


État 61

   21 Expression: Expression . OpInt Expression
   21           | Expression OpInt Expression .

    tADD  décalage et aller à l'état 52
    tSUB  décalage et aller à l'état 53
    tMUL  décalage et aller à l'état 54
    tDIV  décalage et aller à l'état 55

    tADD      [réduction par utilisation de la règle 21 (Expression)]
    tSUB      [réduction par utilisation de la règle 21 (Expression)]
    tMUL      [réduction par utilisation de la règle 21 (Expression)]
    tDIV      [réduction par utilisation de la règle 21 (Expression)]
    $défaut  réduction par utilisation de la règle 21 (Expression)

    OpInt  aller à l'état 57
